v3.5.1 (XXXX-XX-XX)
-------------------

* Geo functions will now have better error reporting on invalid input.

* The graph viewer of the web interface now tries to find a vertex document of
  all available vertex collections before it aborts.

* Fixed issue #9795: fix AQL `NOT IN` clause in SEARCH operations for ArangoSearch
  views.

* Make minimum timeout for synchronous replication configurable via parameter
  (--cluster.synchronous-replication-timeout-minimum) and increase default value
  to prevent dropping followers unnecessarily.

* Added support for TLS 1.3 for the arangod server and the client tools.

  The default TLS protocol for the arangod server is still TLS 1.2 however, in order
  to keep compatibility with previous versions of ArangoDB.

  The arangod server and any of the client tools can be started with option 
  `--ssl.protocol 6` to make use of TLS 1.3.

  To configure the TLS version for arangod instances started by the ArangoDB starter,
  one can use the `--all.ssl.protocol=VALUE` startup option for the ArangoDB starter,
  where VALUE is one of the following:

  - 4 = TLSv1
  - 5 = TLSv1.2
  - 6 = TLSv1.3

* Fixed parsing of "NOT IN" in AQL, which previously didn't correctly parse
  "NOT IN_RANGE(...)" because it checked if the "NOT" token was followed by
  whitespace and then the two letters "IN".

* Changed log level for message "keep alive timeout - closing stream!" from INFO to
  DEBUG.

* Don't create temporary directories named "arangosh_XXXXXX" anymore.

* Add TransactionStatistics to ServerStatistics (transactions started /
  aborted / committed and number of intermediate commits).

* Upgraded version of bundled curl library to 7.65.3.

* Don't retry persisting follower information for collections/shards already
  dropped. The previous implementation retried (unsuccessfully in this case)
  for up to 2 hours, occupying one scheduler thread.

* Fixed internal issue #4407: remove storage engine warning.
